2005-04-19  Florian Boor  <florian.boor@kernelconcepts.de>

    * gstplayer.c: Remove some useless lines.

2005-04-17  Florian Boor  <florian.boor@kernelconcepts.de>

    * gpe-nmf.c, playlist-edit.c: GUI improvements:
      - Don't load useless icons.
      - Use correct stock icons.
      - Don't use fixed playlist toolbar layout.
      - Implement selecting of multiple items.
      - fixed warning about const type
      - add ok button
      - fixed tooltips text
    * frontend.h, playlist-edit.c: Remember last path.
    * gpe-nmf.c: Re-Enable slider - we really want to fix it.

2005-04-16  Florian Boor  <florian.boor@kernelconcepts.de>

	* Makefile, backend/Makefile: Fixed path in install target.

2005-03-31  Florian Boor  <florian.boor@kernelconcepts.de>

	* Don't use render.h

2004-09-21  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released Version 0.19
	* Applied patches by Chris Lord <cwiiis@blueyonder.co.uk> fixing:
          - Pause button
          -Progress from one track to the next
          -No dependence on gnome-vfs by default (though it can be used optionally still)
          -Progress bar
          -Time display


2004-07-06  Florian Boor  <florian.boor@kernelconcepts.de>

	* Makefile, backend/Makefile: More makefile fixes and updates.
	* backend/gstplayer.c: metadata_notify() Comment out a little bit
          more to compile with gstreamer 0.8.

2004-07-05  Florian Boor  <florian.boor@kernelconcepts.de>
	
	* Makefile: Updated to next generation of makefiles.

2003-07-11  Philip Blundell  <philb@gnu.org>

	* Version 0.16 released.

2003-07-06  Moray Allan  <moray@sermisy.org>

	* playlist_edit.c: Removed GTK1 warning.

2003-06-28  Robert Mibus  <mibus@handhelds.org>

	* gpe-nmf.c: Add shuffle and loop toggles.

	* backend/gstplayer.c: Map shuffle/non-shuffle indexes when turning
	shuffle on/off.

2003-04-08  Florian Boor  <florian.boor@kernelconcepts.de>

	* Added some lines to allow opening the fileselector only once.